--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,35 +1,37 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 @model RegisterModel
-@{
+@* @{
     ViewData["Title"] = "Registration";
-}
+} *@
 
 <div class="mx-auto m-4" style="width: 200px;">
-  <h1>@ViewData["Title"]</h1>
+    <h1>@Localizer["RegisterHeader"]</h1>
 </div>
 
 <div class="row">
     <div class="mx-auto col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="d-grid gap-2">
-            <h2>Create new account.</h2>
+            <h2>@Localizer["CreateNewAccountText"]</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
+                <label asp-for="Input.Email" class="form-label">@Localizer["EmailLabel"]</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
+                <label asp-for="Input.Password" class="form-label">@Localizer["PasswordLabel"]</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
+                <label asp-for="Input.ConfirmPassword" class="form-label">@Localizer["ConfirmPasswordText"]</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Registration</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">@Localizer["RegisterButtonText"]</button>
         </form>
     </div>
     
