--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="text-center">
     <h1 class="display-4">@Localizer["WelcomeHeader"]</h1>
-    @if (User.Identity == null && !User.Identity.IsAuthenticated)
+    @if (User.Identity == null || !User.Identity.IsAuthenticated)
     {
         <p>@Localizer["LoginAnnotation"]</p>
     }
